--- a/src/FitnessFrog/FitnessFrog/FitnessFrog.csproj
+++ b/src/FitnessFrog/FitnessFrog/FitnessFrog.csproj
@@ -88,19 +88,27 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Script\bootstrap-datepicker.min.js" />
-    <Content Include="Script\bootstrap.js" />
-    <Content Include="Script\bootstrap.min.js" />
     <Content Include="Content\bootstrap-datepicker3.min.css" />
     <Content Include="Content\site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="img\check.png" />
     <Content Include="img\x.png" />
-    <None Include="Script\jquery-1.10.2.intellisense.js" />
-    <Content Include="Script\jquery-1.10.2.js" />
-    <Content Include="Script\jquery-1.10.2.min.js" />
-    <Content Include="Script\modernizr-2.6.2.js" />
+    <Content Include="Scripts\bootstrap-datepicker.min.js" />
+    <Content Include="Scripts\bootstrap.js" />
+    <Content Include="Scripts\bootstrap.min.js" />
+    <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\jquery-1.10.2.js" />
+    <Content Include="Scripts\jquery-1.10.2.min.js" />
+    <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <None Include="Scripts\jquery-1.8.0.intellisense.js" />
+    <Content Include="Scripts\jquery-1.8.0.js" />
+    <Content Include="Scripts\jquery-1.8.0.min.js" />
+    <Content Include="Scripts\jquery.validate.js" />
+    <Content Include="Scripts\jquery.validate.min.js" />
+    <Content Include="Scripts\jquery.validate.unobtrusive.js" />
+    <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -121,7 +129,6 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
-    <Content Include="Script\jquery-1.10.2.min.map" />
     <None Include="packages.config" />
     <Content Include="Views\Entries\Add.cshtml" />
     <Content Include="Views\Entries\Delete.cshtml" />
@@ -130,6 +137,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Shared\_Logo.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Scripts\jquery-1.10.2.min.map" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
