--- a/src/FitnessFrog/FitnessFrog/packages.config
+++ b/src/FitnessFrog/FitnessFrog/packages.config
@@ -8,4 +8,5 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.12" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
+  <package id="Moment.js" version="2.29.1" targetFramework="net461" />
 </packages>
