--- a/src/FitnessFrog/FitnessFrog/FitnessFrog.csproj
+++ b/src/FitnessFrog/FitnessFrog/FitnessFrog.csproj
@@ -142,6 +142,7 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Scripts\moment.min.js.map" />
     <Content Include="Scripts\moment-with-locales.min.js.map" />
+    <Content Include="Views\Entries\_EntryForm.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
